--- a/downloads.html
+++ b/downloads.html
@@ -1,89 +1,172 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Downloads | Finance Point</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <style>
-    body {
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+    }
+
+    body {
+      min-height: 100vh;
+      background: #0e0e0e url('https://assets-global.website-files.com/63ed27b9dd47f05e61a1c8cf/63f61d234024d2680f167048_particles.gif') no-repeat center center fixed;
+      background-size: cover;
       color: #fff;
+      display: flex;
+    }
+
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 220px;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.8);
+      padding: 20px 10px;
+      z-index: 10;
+    }
+
+    .sidebar h2 {
+      color: #ffd700;
+      text-align: center;
+      font-size: 22px;
+      margin-bottom: 30px;
+    }
+
+    .sidebar a {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      color: #ccc;
+      text-decoration: none;
+      padding: 12px 20px;
+      margin: 8px 0;
+      border-radius: 5px;
+      transition: background 0.3s;
+    }
+
+    .sidebar a:hover, .sidebar a.active {
+      background: #ffd700;
+      color: #000;
+      font-weight: bold;
+    }
+
+    .main {
+      margin-left: 220px;
       padding: 2rem;
-    }h1 {
-  text-align: center;
-  color: #ffd700;
-  margin-bottom: 2rem;
-}
+      flex: 1;
+    }
 
-.downloads-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 20px;
-  max-width: 1000px;
-  margin: 0 auto;
-}
+    .main h1 {
+      color: #ffd700;
+      font-size: 28px;
+      margin-bottom: 1.5rem;
+    }
 
-.download-card {
-  background: rgba(255, 255, 255, 0.08);
-  padding: 1.5rem;
-  border-radius: 1rem;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-  backdrop-filter: blur(5px);
-  text-align: center;
-}
+    .search-bar {
+      margin-bottom: 20px;
+    }
 
-.download-card h3 {
-  color: #ffd700;
-  margin-bottom: 0.5rem;
-}
+    .search-bar input {
+      width: 100%;
+      padding: 12px;
+      font-size: 16px;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+    }
 
-.download-card a {
-  color: #fff;
-  text-decoration: none;
-  border: 1px solid #ffd700;
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
-  transition: background 0.3s;
-}
+    .materials {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
+    }
 
-.download-card a:hover {
-  background: #ffd700;
-  color: #000;
-}
+    .material {
+      background: rgba(255,255,255,0.08);
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      transition: 0.3s;
+    }
 
-footer {
-  text-align: center;
-  margin-top: 3rem;
-  color: #bbb;
-  font-size: 14px;
-}
+    .material:hover {
+      background: #ffd700;
+      color: #000;
+    }
 
+    .material a {
+      color: inherit;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    @media (max-width: 768px) {
+      .sidebar {
+        display: none;
+      }
+      .main {
+        margin-left: 0;
+        padding: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
-  <h1>📥 Finance Downloads</h1>
-  <div class="downloads-container">
-    <div class="download-card">
-      <h3>Introduction to Financial Accounting</h3>
-      <a href="/mnt/data/finance_materials/introduction_to_financial_accounting.txt" download>Download</a>
+  <div class="sidebar">
+    <h2>Finance Point</h2>
+    <a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
+    <a href="downloads.html" class="active"><i class="fas fa-file-download"></i> Downloads</a>
+    <a href="events.html"><i class="fas fa-calendar"></i> Events</a>
+    <a href="news.html"><i class="fas fa-bullhorn"></i> News</a>
+    <a href="executives.html"><i class="fas fa-users"></i> Executives</a>
+    <a href="lostandfound.html"><i class="fas fa-search"></i> Lost & Found</a>
+    <a href="birthday.html"><i class="fas fa-birthday-cake"></i> Birthday Wall</a>
+    <a href="study.html"><i class="fas fa-book"></i> Study Resources</a>
+    <a href="contact.html"><i class="fas fa-phone"></i> Contact</a>
+  </div>
+
+  <div class="main">
+    <h1>📥 Downloadable Finance Materials</h1>
+    <div class="search-bar">
+      <input type="text" placeholder="Search materials..." oninput="searchMaterials(this.value)" />
     </div>
-    <div class="download-card">
-      <h3>Principles of Corporate Finance</h3>
-      <a href="/mnt/data/finance_materials/principles_of_corporate_finance.txt" download>Download</a>
+
+    <div class="materials" id="materialList">
+      <div class="material">
+        <a href="https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf" download>
+          Fundamentals of Banking (PDF)
+        </a>
+      </div>
+      <div class="material">
+        <a href="https://raw.githubusercontent.com/mdn/content/main/files/en-us/learn/css/first_steps/introduction_to_css/index.md" download>
+          Top 10 Financial Ratios Explained (TXT)
+        </a>
+      </div>
+      <div class="material">
+        <a href="https://www.africau.edu/images/default/sample.pdf" download>
+          Basic Investment Theories (PDF)
+        </a>
+      </div>
     </div>
-    <div class="download-card">
-      <h3>Central Bank and Monetary Policy</h3>
-      <a href="/mnt/data/finance_materials/central_bank_and_monetary_policy_in_nigeria.txt" download>Download</a>
-    </div>
-    <div class="download-card">
-      <h3>Personal Finance for Students</h3>
-      <a href="/mnt/data/finance_materials/personal_finance_for_students.txt" download>Download</a>
-    </div>
-  </div>  <footer>
-    &copy; 2025 Finance Point • AAUA Finance Dept • Created by OBA
-  </footer>
+  </div>
+
+  <script>
+    function searchMaterials(keyword) {
+      keyword = keyword.toLowerCase();
+      const items = document.querySelectorAll('.material');
+      items.forEach(item => {
+        const text = item.innerText.toLowerCase();
+        item.style.display = text.includes(keyword) ? 'block' : 'none';
+      });
+    }
+  </script>
 </body>
 </html>
