--- a/downloads.html
+++ b/downloads.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -12,111 +11,110 @@
       padding: 0;
       box-sizing: border-box;
       font-family: 'Poppins', sans-serif;
-    }
+    }body {
+  min-height: 100vh;
+  background: #0e0e0e url('https://assets-global.website-files.com/63ed27b9dd47f05e61a1c8cf/63f61d234024d2680f167048_particles.gif') no-repeat center center fixed;
+  background-size: cover;
+  color: #fff;
+  display: flex;
+}
 
-    body {
-      min-height: 100vh;
-      background: #0e0e0e url('https://assets-global.website-files.com/63ed27b9dd47f05e61a1c8cf/63f61d234024d2680f167048_particles.gif') no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
-      display: flex;
-    }
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 220px;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+  padding: 20px 10px;
+  z-index: 10;
+}
 
-    .sidebar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 220px;
-      height: 100vh;
-      background: rgba(0, 0, 0, 0.8);
-      padding: 20px 10px;
-      z-index: 10;
-    }
+.sidebar h2 {
+  color: #ffd700;
+  text-align: center;
+  font-size: 22px;
+  margin-bottom: 30px;
+}
 
-    .sidebar h2 {
-      color: #ffd700;
-      text-align: center;
-      font-size: 22px;
-      margin-bottom: 30px;
-    }
+.sidebar a {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #ccc;
+  text-decoration: none;
+  padding: 12px 20px;
+  margin: 8px 0;
+  border-radius: 5px;
+  transition: background 0.3s;
+}
 
-    .sidebar a {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      color: #ccc;
-      text-decoration: none;
-      padding: 12px 20px;
-      margin: 8px 0;
-      border-radius: 5px;
-      transition: background 0.3s;
-    }
+.sidebar a:hover, .sidebar a.active {
+  background: #ffd700;
+  color: #000;
+  font-weight: bold;
+}
 
-    .sidebar a:hover, .sidebar a.active {
-      background: #ffd700;
-      color: #000;
-      font-weight: bold;
-    }
+.main {
+  margin-left: 220px;
+  padding: 2rem;
+  flex: 1;
+}
 
-    .main {
-      margin-left: 220px;
-      padding: 2rem;
-      flex: 1;
-    }
+.main h1 {
+  color: #ffd700;
+  font-size: 28px;
+  margin-bottom: 1.5rem;
+}
 
-    .main h1 {
-      color: #ffd700;
-      font-size: 28px;
-      margin-bottom: 1.5rem;
-    }
+.search-bar {
+  margin-bottom: 20px;
+}
 
-    .search-bar {
-      margin-bottom: 20px;
-    }
+.search-bar input {
+  width: 100%;
+  padding: 12px;
+  font-size: 16px;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+}
 
-    .search-bar input {
-      width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: none;
-      outline: none;
-    }
+.materials {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1rem;
+}
 
-    .materials {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1rem;
-    }
+.material {
+  background: rgba(255,255,255,0.08);
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  transition: 0.3s;
+}
 
-    .material {
-      background: rgba(255,255,255,0.08);
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-      transition: 0.3s;
-    }
+.material:hover {
+  background: #ffd700;
+  color: #000;
+}
 
-    .material:hover {
-      background: #ffd700;
-      color: #000;
-    }
+.material a {
+  color: inherit;
+  text-decoration: none;
+  font-weight: 600;
+}
 
-    .material a {
-      color: inherit;
-      text-decoration: none;
-      font-weight: 600;
-    }
+@media (max-width: 768px) {
+  .sidebar {
+    display: none;
+  }
+  .main {
+    margin-left: 0;
+    padding: 1rem;
+  }
+}
 
-    @media (max-width: 768px) {
-      .sidebar {
-        display: none;
-      }
-      .main {
-        margin-left: 0;
-        padding: 1rem;
-      }
-    }
   </style>
 </head>
 <body>
@@ -131,34 +129,29 @@
     <a href="birthday.html"><i class="fas fa-birthday-cake"></i> Birthday Wall</a>
     <a href="study.html"><i class="fas fa-book"></i> Study Resources</a>
     <a href="contact.html"><i class="fas fa-phone"></i> Contact</a>
-  </div>
-
-  <div class="main">
+  </div>  <div class="main">
     <h1>📥 Downloadable Finance Materials</h1>
     <div class="search-bar">
       <input type="text" placeholder="Search materials..." oninput="searchMaterials(this.value)" />
-    </div>
-
-    <div class="materials" id="materialList">
-      <div class="material">
-        <a href="https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf" download>
-          Fundamentals of Banking (PDF)
-        </a>
-      </div>
-      <div class="material">
-        <a href="https://raw.githubusercontent.com/mdn/content/main/files/en-us/learn/css/first_steps/introduction_to_css/index.md" download>
-          Top 10 Financial Ratios Explained (TXT)
-        </a>
-      </div>
-      <div class="material">
-        <a href="https://www.africau.edu/images/default/sample.pdf" download>
-          Basic Investment Theories (PDF)
-        </a>
-      </div>
-    </div>
+    </div><div class="materials" id="materialList">
+  <div class="material">
+    <a href="https://filesamples.com/samples/document/pdf/sample1.pdf" download>Fundamentals of Banking (PDF)</a>
   </div>
+  <div class="material">
+    <a href="https://filesamples.com/samples/document/txt/sample1.txt" download>Top 10 Financial Ratios Explained (TXT)</a>
+  </div>
+  <div class="material">
+    <a href="https://filesamples.com/samples/document/pdf/sample2.pdf" download>Basic Investment Theories (PDF)</a>
+  </div>
+  <div class="material">
+    <a href="https://filesamples.com/samples/document/pdf/sample3.pdf" download>Risk Management Techniques (PDF)</a>
+  </div>
+  <div class="material">
+    <a href="https://filesamples.com/samples/document/txt/sample2.txt" download>Introduction to Capital Markets (TXT)</a>
+  </div>
+</div>
 
-  <script>
+  </div>  <script>
     function searchMaterials(keyword) {
       keyword = keyword.toLowerCase();
       const items = document.querySelectorAll('.material');
@@ -167,6 +160,5 @@
         item.style.display = text.includes(keyword) ? 'block' : 'none';
       });
     }
-  </script>
-</body>
+  </script></body>
 </html>
