--- a/dashboard.html
+++ b/dashboard.html
@@ -1,333 +1,157 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dashboard | Finance Point</title>
-
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap"
-    rel="stylesheet"
-  />
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <style>
-    /* Root colors and fonts */
-    :root {
-      --bg-color: #121822;
-      --highlight: #ffd700;
-      --text-light: #eee;
-      --text-muted: #bbb;
-      --card-bg: rgba(255 215 0 / 0.1);
-      --card-bg-hover: rgba(255 215 0 / 0.25);
-    }
-
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
-    }
+      font-family: 'Poppins', sans-serif;
+    }body {
+  min-height: 100vh;
+  background: #0e0e0e url('https://assets-global.website-files.com/63ed27b9dd47f05e61a1c8cf/63f61d234024d2680f167048_particles.gif') no-repeat center center fixed;
+  background-size: cover;
+  color: #fff;
+  display: flex;
+}
 
-    body,
-    html {
-      height: 100%;
-      background-color: var(--bg-color);
-      color: var(--text-light);
-      overflow-x: hidden;
-      position: relative;
-    }
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 220px;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+  padding: 20px 10px;
+  z-index: 10;
+}
 
-    /* Particle canvas full screen behind */
-    #particles-canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: 0;
-      pointer-events: none;
-      background: #121822;
-    }
+.sidebar h2 {
+  color: #ffd700;
+  text-align: center;
+  font-size: 22px;
+  margin-bottom: 30px;
+}
 
-    /* Sidebar styling */
-    .sidebar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100vh;
-      width: 230px;
-      background-color: rgba(18, 24, 34, 0.95);
-      box-shadow: 2px 0 8px rgba(0, 0, 0, 0.7);
-      padding: 25px 15px;
-      z-index: 10;
-      overflow-y: auto;
-    }
+.sidebar a {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #ccc;
+  text-decoration: none;
+  padding: 12px 20px;
+  margin: 8px 0;
+  border-radius: 5px;
+  transition: background 0.3s;
+}
 
-    .sidebar h2 {
-      color: var(--highlight);
-      font-size: 26px;
-      text-align: center;
-      margin-bottom: 40px;
-      font-weight: 700;
-      letter-spacing: 1.2px;
-    }
+.sidebar a:hover, .sidebar a.active {
+  background: #ffd700;
+  color: #000;
+  font-weight: bold;
+}
 
-    .sidebar a {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      color: var(--text-muted);
-      text-decoration: none;
-      padding: 13px 18px;
-      margin-bottom: 14px;
-      border-radius: 8px;
-      font-weight: 500;
-      font-size: 16px;
-      transition: background-color 0.3s, color 0.3s;
-    }
+.main {
+  margin-left: 220px;
+  padding: 2rem;
+  flex: 1;
+}
 
-    .sidebar a.active,
-    .sidebar a:hover {
-      background-color: var(--highlight);
-      color: #121822;
-      font-weight: 700;
-    }
+.main h1 {
+  color: #ffd700;
+  font-size: 28px;
+  margin-bottom: 1.5rem;
+}
 
-    .sidebar a i {
-      font-size: 18px;
-      width: 22px;
-      text-align: center;
-    }
+.search-bar {
+  margin-bottom: 20px;
+}
 
-    /* Main content */
-    .main {
-      margin-left: 230px;
-      padding: 2.5rem 3rem;
-      z-index: 5;
-      position: relative;
-      min-height: 100vh;
-    }
+.search-bar input {
+  width: 100%;
+  padding: 12px;
+  font-size: 16px;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+}
 
-    .header h1 {
-      font-size: 28px;
-      color: var(--highlight);
-      margin-bottom: 2rem;
-      font-weight: 700;
-      letter-spacing: 0.8px;
-    }
+.features {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1rem;
+}
 
-    /* Search box */
-    .search-container {
-      margin-bottom: 25px;
-      max-width: 450px;
-    }
+.feature {
+  background: rgba(255,255,255,0.08);
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  transition: 0.3s;
+}
 
-    .search-container input[type="text"] {
-      width: 100%;
-      padding: 12px 18px;
-      border-radius: 30px;
-      border: none;
-      font-size: 16px;
-      font-weight: 500;
-      outline: none;
-      background-color: rgba(255 255 255 / 0.1);
-      color: var(--text-light);
-      transition: background-color 0.3s;
-    }
+.feature:hover {
+  background: #ffd700;
+  color: #000;
+}
 
-    .search-container input[type="text"]::placeholder {
-      color: var(--text-muted);
-    }
+.feature a {
+  color: inherit;
+  text-decoration: none;
+  font-weight: 600;
+}
 
-    .search-container input[type="text"]:focus {
-      background-color: var(--card-bg-hover);
-      box-shadow: 0 0 8px var(--highlight);
-    }
+@media (max-width: 768px) {
+  .sidebar {
+    display: none;
+  }
+  .main {
+    margin-left: 0;
+    padding: 1rem;
+  }
+}
 
-    /* Quick nav grid */
-    .quick-nav {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 18px;
-      margin-bottom: 35px;
-    }
-
-    .quick-nav a {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 18px 0;
-      border-radius: 15px;
-      background-color: var(--card-bg);
-      text-decoration: none;
-      color: var(--text-light);
-      font-weight: 600;
-      font-size: 15px;
-      transition: background-color 0.3s, color 0.3s;
-      box-shadow: 0 0 6px rgba(255, 215, 0, 0.1);
-    }
-
-    .quick-nav a i {
-      font-size: 30px;
-      margin-bottom: 8px;
-      color: var(--highlight);
-      transition: color 0.3s;
-    }
-
-    .quick-nav a:hover {
-      background-color: var(--highlight);
-      color: #121822;
-    }
-
-    .quick-nav a:hover i {
-      color: #121822;
-    }
-
-    /* Facts and academic tips cards */
-    .facts,
-    .notifications {
-      background-color: var(--card-bg);
-      padding: 24px 28px;
-      border-radius: 14px;
-      box-shadow: 0 0 10px rgba(255, 215, 0, 0.15);
-      margin-bottom: 25px;
-    }
-
-    .facts h2,
-    .notifications h2 {
-      color: var(--highlight);
-      margin-bottom: 15px;
-      font-weight: 700;
-      font-size: 20px;
-      letter-spacing: 0.5px;
-    }
-
-    .facts ul,
-    .notifications ul {
-      list-style: disc inside;
-      color: var(--text-light);
-      font-weight: 500;
-      font-size: 15px;
-      line-height: 1.5;
-      max-width: 700px;
-      user-select: none;
-    }
-
-    /* Responsive */
-    @media (max-width: 900px) {
-      .sidebar {
-        width: 60px;
-        padding: 25px 5px;
-      }
-      .sidebar h2 {
-        display: none;
-      }
-      .sidebar a {
-        justify-content: center;
-        padding: 14px 0;
-        margin-bottom: 10px;
-        font-size: 0;
-        border-radius: 10px;
-      }
-      .sidebar a i {
-        font-size: 22px;
-        color: var(--text-muted);
-      }
-      .sidebar a.active,
-      .sidebar a:hover {
-        color: var(--highlight);
-        background-color: transparent;
-      }
-
-      .main {
-        margin-left: 60px;
-        padding: 2rem 1.5rem;
-      }
-
-      .quick-nav {
-        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-        gap: 14px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .main {
-        padding: 1.5rem 1rem;
-      }
-    }
   </style>
 </head>
 <body>
-  <!-- Particle background canvas -->
-  <canvas id="particles-canvas"></canvas>
-
-  <!-- Sidebar -->
-  <nav class="sidebar">
+  <div class="sidebar">
     <h2>Finance Point</h2>
-    <a href="dashboard.html" class="active" title="Dashboard"><i class="fas fa-home"></i></a>
-    <a href="downloads.html" title="Downloads"><i class="fas fa-file-download"></i></a>
-    <a href="events.html" title="Events"><i class="fas fa-calendar"></i></a>
-    <a href="news.html" title="News"><i class="fas fa-bullhorn"></i></a>
-    <a href="executives.html" title="Executives"><i class="fas fa-users"></i></a>
-    <a href="lostandfound.html" title="Lost & Found"><i class="fas fa-search"></i></a>
-    <a href="birthday.html" title="Birthday Wall"><i class="fas fa-birthday-cake"></i></a>
-    <a href="study.html" title="Study Resources"><i class="fas fa-book"></i></a>
-    <a href="contact.html" title="Contact"><i class="fas fa-phone"></i></a>
-  </nav>
+    <a href="dashboard.html" class="active"><i class="fas fa-home"></i> Dashboard</a>
+    <a href="downloads.html"><i class="fas fa-file-download"></i> Downloads</a>
+    <a href="events.html"><i class="fas fa-calendar"></i> Events</a>
+    <a href="news.html"><i class="fas fa-bullhorn"></i> News</a>
+    <a href="executives.html"><i class="fas fa-users"></i> Executives</a>
+    <a href="lostandfound.html"><i class="fas fa-search"></i> Lost & Found</a>
+    <a href="birthday.html"><i class="fas fa-birthday-cake"></i> Birthday Wall</a>
+    <a href="study.html"><i class="fas fa-book"></i> Study Resources</a>
+    <a href="contact.html"><i class="fas fa-phone"></i> Contact</a>
+  </div>  <div class="main">
+    <h1>👋 Welcome to the Finance Point Dashboard</h1>
+    <div class="search-bar">
+      <input type="text" placeholder="Search features..." oninput="searchFeatures(this.value)" />
+    </div><div class="features" id="featureList">
+  <div class="feature"><a href="downloads.html">📥 Downloads</a></div>
+  <div class="feature"><a href="events.html">📅 Events</a></div>
+  <div class="feature"><a href="news.html">📢 News</a></div>
+  <div class="feature"><a href="executives.html">👥 Executives</a></div>
+  <div class="feature"><a href="lostandfound.html">🔍 Lost & Found</a></div>
+  <div class="feature"><a href="birthday.html">🎉 Birthday Wall</a></div>
+  <div class="feature"><a href="study.html">📚 Study Resources</a></div>
+  <div class="feature"><a href="contact.html">📞 Contact</a></div>
+</div>
 
-  <!-- Main content -->
-  <main class="main">
-    <header class="header">
-      <h1>👋 Welcome to the Finance Point Dashboard</h1>
-    </header>
-
-    <!-- Search bar -->
-    <div class="search-container">
-      <input
-        type="text"
-        id="searchInput"
-        placeholder="Search quick links..."
-        aria-label="Search quick links"
-      />
-    </div>
-
-    <!-- Quick navigation cards -->
-    <div class="quick-nav" id="quickNav">
-      <a href="downloads.html"><i class="fas fa-file-download"></i> Downloads</a>
-      <a href="events.html"><i class="fas fa-calendar"></i> Events</a>
-      <a href="news.html"><i class="fas fa-bullhorn"></i> News</a>
-      <a href="executives.html"><i class="fas fa-users"></i> Executives</a>
-      <a href="lostandfound.html"><i class="fas fa-search"></i> Lost & Found</a>
-      <a href="birthday.html"><i class="fas fa-birthday-cake"></i> Birthday Wall</a>
-      <a href="study.html"><i class="fas fa-book"></i> Study Resources</a>
-    </div>
-
-    <!-- Finance facts -->
-    <section class="facts">
-      <h2>💡 Finance Facts</h2>
-      <ul>
-        <li>CBN regulates Nigeria’s monetary policy using tools like MPR, CRR, and liquidity ratio.</li>
-        <li>First Bank Nigeria was established in 1894 as the Bank of British West Africa.</li>
-        <li>Capital budgeting helps determine the viability of long-term financial investments.</li>
-      </ul>
-    </section>
-
-    <!-- Academic tips -->
-    <section class="notifications">
-      <h2>📚 Academic Tips</h2>
-      <ul>
-        <li>Always revise your lecture notes within 24 hours to improve retention.</li>
-        <li>Use color-coded flashcards for definitions and concepts.</li>
-        <li>Join a study group to discuss and simplify tough topics like finance law.</li>
-      </ul>
-    </section>
-  </main>
-
-  <script>
-    // Particle animation code
-    const canvas =
+  </div>  <script>
+    function searchFeatures(keyword) {
+      keyword = keyword.toLowerCase();
+      const items = document.querySelectorAll('.feature');
+      items.forEach(item => {
+        const text = item.innerText.toLowerCase();
+        item.style.display = text.includes(keyword) ? 'block' : 'none';
+      });
+    }
+  </script></body>
+</html>
